formatted the padding and height to fix the overall alignments of rows and columns

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ textarea {
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  /* padding: 10px; */
+  height: 79px;
 }
 
 .jumbotron {
@@ -34,9 +35,6 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
-  /* margin: 0px;
-  padding: 0px;
-  margin-bottom: 0px; */
 }
 
 .hour {
@@ -66,10 +64,14 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-  padding: 10px
+  width: 100%;
+  height: 79px;
+ 
+  
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
